@@ -8,6 +8,9 @@ Changelog
 - Added test to test mail creation with weird characters in subject.
   [lgraf]
 
+- Normalizing subject before using it as an ID to create a mail object.
+  [lgraf]
+
 
 1.0a10 (2011-09-27)
 -------------------
